Everything before 1.4  are finished, won't be changed in fors eeable future. 1.4 and 1.5 are expected  to be finished before Aug 9 Wednesday.  1.7 will be about complex numbers and the expansion of power definiton. Trigo nemtric function must be rigorously def ined in section 1.7

--- a/Rudin.true/preamble.tex
+++ b/Rudin.true/preamble.tex
@@ -34,13 +34,14 @@
 
 % Hyperlinks
 \usepackage{bookmark}
-\usepackage{hyperref}
-\hypersetup{
+\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue,citecolor=blue,anchorcolor=blue]{hyperref}
+% \usepackage{hyperref}
+% \hypersetup{
     pdftitle={Assignment},
     colorlinks=true, linkcolor=doc!90,
     bookmarksnumbered=true,
     bookmarksopen=true
-}
+%}
 
 % Figures and Graphics
 \usepackage{import}
